<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66000000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/pop_del_tv"
            style="@style/ButtonStyleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_switch_settings_delete_str" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/pop_del_all_tv"
            style="@style/ButtonStyleTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_switch_settings_delete_all_str" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/pop_add_new_tv"
            style="@style/ButtonStyleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_switch_settings_add_new_str" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey" />

        <TextView
            android:id="@+id/pop_back_tv"
            style="@style/ButtonStyleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_switch_settings_back_str" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />

    </LinearLayout>
</RelativeLayout>